SHS-6216: Text Area Spacing issue with Unordered lists (#1866)
* SHS-6216: Text Area Spacing issue with Unordered lists (#1866).

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/elements/_base.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/elements/_base.scss
@@ -117,10 +117,6 @@ h6 {
 
 p:not([class]) {
   margin-top: 0;
-
-  &:last-of-type {
-    margin-bottom: 0;
-  }
 }
 
 strong:not([class]) {
